<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photochat</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="button_login">SIGN IN</string>
    <string name="singnup_text">Don\'t have an account ? Sign Up!</string>
    <string name="signup_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_text">E-mail</string>
    <string name="action_logout">Log Out</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>

    <string-array name="camera_options">
        <item>Take Photo</item>
        <item>Take Video</item>
        <item>Choose Photo</item>
        <item>Choose Video</item>
    </string-array>

    <string name="menu_camera_string">Camera</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="no_friends_string">Choose some friends first</string>
    <string name="send_button">"Send "</string>
    <string name="title_activity_view_images">Image Viewer</string>
    <string name="notification_message">You have a new message</string>
    <string name="push_message">You have a new message from %s!</string>

</resources>
